Correction du collapse

--- a/src/styles/Accomodation.scss
+++ b/src/styles/Accomodation.scss
@@ -20,6 +20,7 @@
 
     ul{
         display: flex;
+        flex-wrap: wrap;
         gap: 10px;
         padding: 0;
         margin: 20px 0 8px 0;
@@ -95,11 +96,10 @@
         ul{
             gap: 10px;
             margin: 10px 0 16px 0;
-            flex-wrap: wrap;
     
             li{
                 font-size: 10px;
-                min-width: 84px;
+                min-width: 74px;
                 height: 18px;
                 padding: 0 5px;
             }
