--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     margin: 50px 100px 43px 100px;
-    max-width: 1240px;
+    max-width: 1208px;
     height: 223px;
     padding: 0 16px;
 }
