--- a/src/styles/Collapse.scss
+++ b/src/styles/Collapse.scss
@@ -5,6 +5,7 @@
     
     .list{
         width: 100%;
+        margin-bottom: -2px;
 
         h2{
             list-style: none;
@@ -21,27 +22,21 @@
 
             .btn{
                 z-index: 1;
+                transform: rotate(0deg);
+                transition: transform 0.4s ease-in-out;
             }
 
             .rotate{
                 transform: rotate(-180deg);
-                transition: transform 0.3s;
-                &:active{
-                    transform: rotate(0deg);
-                }
-            }
-    
-            &:active + .open{
-                max-height: 52px;
-            }
+            }    
         }
 
-        .open{
+        .toggle{
             position: relative;
             top: -52px;
-            max-height: 800px;
+            max-height: 52px;
             overflow: hidden;
-            transition: max-height 0.6s ease-in-out;
+            transition: max-height 1s ease-in-out;
 
             .message{
                 background-color: #F6F6F645;
@@ -53,15 +48,15 @@
                 position: relative;
             }
         }
-    }
 
-    .show{
-        margin-bottom: -52px;
+        .open{
+            max-height: 800px;
+        }
     }
 }
 
 .equip{
-    margin: 24px 100px 50px 100px;
+    margin: 24px 100px 0px 100px;
     gap: 76px;
 
     .list{
@@ -77,12 +72,15 @@
 }
 
 .about{
-    margin: 0 208.5px 38px 208.5px;
+    margin: 0 208.5px 8px 208.5px;
     flex-direction: column;
-    gap: 30px;
 
-    h2{
-        padding-left: 15px;
+    .list{
+        margin-bottom: -22px;
+        
+        h2{
+            padding-left: 15px;
+        }
     }
 }
 
@@ -91,6 +89,8 @@
 @media (max-width: 768px) {
     .collapse{
         .list{
+            margin-bottom: -10px;
+
             h2{  
                 font-size: 13px;
                 padding-right: 12px;
@@ -100,35 +100,31 @@
                 .btn{
                     width: 16px;
                 }
-
-                &:active + .open{
-                    max-height: 30px;
-                }
             }
 
-            .open{
+            .toggle{
                 top: -30px;
+                max-height: 30px;
                 
                 .message{        
                     padding: 43px 20px 19px 20px;
                     font-size: 12px;         
                 }
             }
-        }
 
-        .show{
-            margin-bottom: -30px;
+            .open{
+                max-height: 800px;
+            }
         }
     }
 
     .equip{
-        margin: 13px 20px 27px 20px;
+        margin: 13px 20px 7px 20px;
         flex-direction: column;
-        gap: 20px;
+        gap: 0;
     }
 
     .about{
-        margin: 19px 19.5px;
-        gap: 20px;
+        margin: 19px 19.5px -1px 19.5px;
     }
 }
